--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/debounce": "^1.2.0",
     "@types/lodash-es": "^4.17.3",
     "@types/react": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
@@ -80,5 +81,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-size-snapshot": "^0.10.0",
     "typescript": "^3.6.4"
+  },
+  "dependencies": {
+    "debounce": "^1.2.0"
   }
 }
