--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "debounce": "^1.2.0"
+    "debounce": "^1.2.0",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
