--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "hooks"
   ],
   "author": "Paul Henschel",
+  "contributors": [{
+    "name": "Erik Verweij",
+    "url": "https://github.com/everweij",
+    "email": "info@erikverweij.com"
+  }],
   "license": "MIT",
   "peerDependencies": {
     "react": ">=16.11",
