--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "types": "./types/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "prebuild": "rimraf dist && npm run typegen",
+    "prebuild": "rimraf dist && npm run typegen && npm run test",
     "build": "rollup -c",
     "prepare": "npm run build",
     "eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start --single-run",
+    "test:watch": "karma start",
     "typecheck": "tsc --noEmit --strict --jsx react src/*",
     "typegen": "tsc || true && prettier types/**/** --write"
   },
@@ -57,22 +58,36 @@
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@testing-library/react": "^9.3.2",
     "@types/debounce": "^1.2.0",
+    "@types/expect": "^1.20.4",
     "@types/lodash-es": "^4.17.3",
+    "@types/mocha": "^5.2.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/styled-components": "^4.1.20",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "expect": "^24.9.0",
     "husky": "^3.0.9",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^4.0.2",
+    "mocha": "^6.2.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
+    "puppeteer": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "rimraf": "^3.0.0",
@@ -82,7 +97,9 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-size-snapshot": "^0.10.0",
-    "typescript": "^3.6.4"
+    "styled-components": "^4.4.1",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2"
   },
   "dependencies": {
     "@juggle/resize-observer": "^2.4.0",
