--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "./types/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "prebuild": "rimraf dist && npm run typegen && npm run test",
+    "prebuild": "rimraf dist && npm run typegen && npm run test && node ssr-test",
     "build": "rollup -c",
     "prepare": "npm run build",
     "eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
@@ -58,6 +58,7 @@
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@babel/register": "^7.7.0",
     "@testing-library/react": "^9.3.2",
     "@types/debounce": "^1.2.0",
     "@types/expect": "^1.20.4",
