--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "puppeteer": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.26.3",
     "rollup-plugin-babel": "^4.3.3",
@@ -103,8 +104,6 @@
     "webpack": "^4.41.2"
   },
   "dependencies": {
-    "@juggle/resize-observer": "^2.4.0",
-    "debounce": "^1.2.0",
-    "resize-observer-polyfill": "^1.5.1"
+    "debounce": "^1.2.0"
   }
 }
