--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "./types/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "prebuild": "rimraf dist && npm run typegen && npm run test && node ssr-test",
+    "prebuild": "rimraf dist && npm run typegen",
     "build": "rollup -c",
     "prepare": "npm run build",
     "eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
@@ -46,62 +46,62 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=16.11",
-    "react-dom": ">=16.11"
+    "react": ">=16.13",
+    "react-dom": ">=16.13"
   },
   "devDependencies": {
-    "@babel/core": "7.6.4",
-    "@babel/plugin-transform-modules-commonjs": "7.6.0",
-    "@babel/plugin-transform-parameters": "7.4.4",
-    "@babel/plugin-transform-runtime": "7.6.2",
-    "@babel/plugin-transform-template-literals": "7.4.4",
-    "@babel/preset-env": "7.6.3",
-    "@babel/preset-react": "7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@babel/register": "^7.7.0",
-    "@testing-library/react": "^9.3.2",
+    "@babel/core": "7.10.2",
+    "@babel/plugin-transform-modules-commonjs": "7.10.1",
+    "@babel/plugin-transform-parameters": "7.10.1",
+    "@babel/plugin-transform-runtime": "7.10.1",
+    "@babel/plugin-transform-template-literals": "7.10.1",
+    "@babel/preset-env": "7.10.2",
+    "@babel/preset-react": "7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "@babel/register": "^7.10.1",
+    "@testing-library/react": "^10.2.1",
     "@types/debounce": "^1.2.0",
-    "@types/expect": "^1.20.4",
+    "@types/expect": "^24.3.0",
     "@types/lodash-es": "^4.17.3",
-    "@types/mocha": "^5.2.7",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
-    "@types/styled-components": "^4.1.20",
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "@types/mocha": "^7.0.2",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "expect": "^24.9.0",
-    "husky": "^3.0.9",
-    "karma": "^4.4.1",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "expect": "^26.0.1",
+    "husky": "^4.2.5",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
-    "mocha": "^6.2.2",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^2.0.0",
-    "puppeteer": "^2.0.0",
+    "mocha": "^7.2.0",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
+    "puppeteer": "^3.3.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.26.3",
-    "rollup-plugin-babel": "^4.3.3",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.13.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-size-snapshot": "^0.10.0",
-    "styled-components": "^4.4.1",
-    "typescript": "^3.6.4",
-    "webpack": "^4.41.2"
+    "rollup-plugin-size-snapshot": "^0.12.0",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0"
   },
   "dependencies": {
     "debounce": "^1.2.0"
