memoize ref function

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@babel/preset-typescript": "^7.10.1",
     "@babel/register": "^7.10.1",
     "@testing-library/react": "^10.2.1",
+    "@testing-library/react-hooks": "^3.4.2",
     "@types/debounce": "^1.2.0",
-    "@types/expect": "^24.3.0",
     "@types/lodash-es": "^4.17.3",
     "@types/mocha": "^7.0.2",
     "@types/react": "^16.9.35",
@@ -91,6 +91,7 @@
     "puppeteer": "^3.3.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-test-renderer": "^17.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.13.1",
