--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@types/lodash-es": "^4.17.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": ">=17.0.37",
+    "@types/react-dom": ">=17.0.11",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
