--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@types/lodash-es": "^4.17.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.10",
-    "@types/react": ">=17.0.37",
-    "@types/react-dom": ">=17.0.11",
+    "@types/react": ">=17.0.2",
+    "@types/react-dom": ">=17.0.2",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -92,8 +92,8 @@
     "prettier": "^2.5.0",
     "pretty-quick": "^3.1.2",
     "puppeteer": "^11.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2",
     "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.1",
