--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
-node_modules/
-coverage/
-dist/
-types/
-yarn-error.log
-.size-snapshot.json
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
 .DS_Store
-.vscode
-.docz/
-package-lock.json
-coverage/
+node_modules
+dist
+
+# Editor directories and files
 .idea
-.rpt2_cache/
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
