--- a/package.json
+++ b/package.json
@@ -2,35 +2,6 @@
   "name": "react-use-measure",
   "version": "2.1.1",
   "description": "measure view bounds",
-  "main": "./dist/web.cjs.js",
-  "module": "./dist/web.js",
-  "types": "./types/index.d.ts",
-  "sideEffects": false,
-  "website": "https://github.com/pmndrs/react-use-measure",
-  "repository": "https://github.com/pmndrs/react-use-measure",
-  "scripts": {
-    "prebuild": "rimraf dist && npm run typegen",
-    "build": "rollup -c",
-    "prepare": "npm run build",
-    "eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
-    "test": "karma start --single-run",
-    "test:watch": "karma start",
-    "typecheck": "tsc --noEmit --strict --jsx react src/*",
-    "typegen": "tsc || true && prettier types/**/** --write"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick"
-    }
-  },
-  "prettier": {
-    "semi": false,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "bracketSameLine": true,
-    "tabWidth": 2,
-    "printWidth": 120
-  },
   "keywords": [
     "react",
     "use",
@@ -39,77 +10,51 @@
     "hooks"
   ],
   "author": "Paul Henschel",
-  "contributors": [
-    {
-      "name": "Erik Verweij",
-      "url": "https://github.com/everweij",
-      "email": "info@erikverweij.com"
-    }
-  ],
+  "homepage": "https://github.com/pmndrs/react-use-measure",
+  "repository": "https://github.com/pmndrs/react-use-measure",
   "license": "MIT",
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "exports": {
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    },
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "sideEffects": false,
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitest/browser": "^3.0.4",
+    "playwright": "^1.50.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
+    "vitest": "^3.0.4"
+  },
   "peerDependencies": {
     "react": ">=16.13",
     "react-dom": ">=16.13"
   },
-  "devDependencies": {
-    "@babel/core": "7.16.0",
-    "@babel/plugin-transform-modules-commonjs": "7.16.0",
-    "@babel/plugin-transform-parameters": "7.16.3",
-    "@babel/plugin-transform-runtime": "7.16.4",
-    "@babel/plugin-transform-template-literals": "7.16.0",
-    "@babel/preset-env": "7.16.4",
-    "@babel/preset-react": "7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@babel/register": "^7.16.0",
-    "@testing-library/react": "^12.1.2",
-    "@types/debounce": "^1.2.1",
-    "@types/expect": "^24.3.0",
-    "@types/lodash-es": "^4.17.5",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "constants-browserify": "^1.0.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "expect": "^27.3.1",
-    "husky": "^4.3.8",
-    "karma": "^6.3.9",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.8",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^9.1.3",
-    "path-browserify": "^1.0.1",
-    "prettier": "^2.5.0",
-    "pretty-quick": "^3.1.2",
-    "puppeteer": "^11.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "resize-observer-polyfill": "^1.5.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.60.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-size-snapshot": "^0.12.0",
-    "stream-browserify": "^3.0.0",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.5.2",
-    "webpack": "^5.64.4"
-  },
-  "dependencies": {
-    "debounce": "^1.2.1"
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "tsc",
+    "test": "vitest run"
   }
 }
