chore: skip lib check of resize observer
https://github.com/que-etc/resize-observer-polyfill/issues/80
https://github.com/que-etc/resize-observer-polyfill/pull/85

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "jsx": "react",
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "paths": {
       "use-measure": ["./src"]
     }
