--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-use-measure",
   "version": "2.1.1",
-  "description": "measure view bounds",
+  "description": "Utility to measure view bounds",
   "keywords": [
     "react",
     "use",
