--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "module": "./dist/index.js",
   "exports": {
     "require": {
-      "types": "./dist/index.d.cts",
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.cjs"
     },
     "import": {
