fix(types): interop default export

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 
 jobs:
-  build-lint-test:
+  build-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,9 +17,6 @@ jobs:
 
       - name: Check build health
         run: yarn build
-
-      - name: Check for regressions
-        run: yarn lint
 
       - name: Run tests
         run: yarn test
