--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "target": "esnext",
-    "module": "esnext",
-    "lib": ["esnext", "dom"],
-    "moduleResolution": "bundler",
-    "strict": true,
-    "pretty": true,
-    "noEmit": true,
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "jsx": "react",
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
+    "pretty": true,
+    "strict": true,
     "skipLibCheck": true,
-    "paths": {
-      "use-measure": ["./src"]
-    }
-  }
+    "declaration": true,
+    "removeComments": true,
+    "emitDeclarationOnly": true,
+    "outDir": "dist",
+    "resolveJsonModule": true
+  },
+  "include": ["./src"],
+  "exclude": ["./node_modules/**/*"]
 }
