--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resize-observer-polyfill": "^1.5.1",
+    "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "vitest": "^3.0.4"
@@ -59,8 +60,7 @@
   "scripts": {
     "postinstall": "npx playwright install",
     "dev": "vite",
-    "build": "vite build",
-    "lint": "tsc",
+    "build": "rimraf dist && vite build && tsc",
     "test": "vitest run"
   }
 }
